@@ -11,7 +11,8 @@ Version 2.7
 * Correctly set CODIF format name, bug fix int framespersecond
 * Caught case where complex data is set to use zeroth order fringe rotation (which isn't implemented)
 * startdifx, genmachines: increase multicast receive buffer size to 8000
-* python3: joblist, jobdisks, jobstatus, startdifx
+* python3: joblist, jobdisks, jobstatus, startdifx, stopmpifxcorr
+* move stopmpifxcorr from scripts/ to utils/ ; get rid of scripts dir
 * can compile again without mark6 libraries
 * Remove experimental support for shared memory datastream -- it never worked
 * Post DiFX-2.6
